# QueueTimer

./: README.md  dashboard.html  index.html  pyproject.toml
alembic/: README  env.py
alembic/versions/: 074500d615f8_updated_elapsed_time_from_int_column_to_.py  2deb0e37d2fd_database_initialization.py  2e0ee9e3d466_updated_remaining_seconds_from_int_to_.py  4861be3d3431_added_on_delete_cascade_to_assignment_.py  4c7b78d79c11_updated_assignment_statistics_model.py  6fa560939618_added_last_paused_time_and_remaining_.py  9ce9e5733edc_updated_assignmentstatstic_model_made_.py
api/: manage.py
api/api/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
api/auth/: admin.py  apps.py  models.py
api/authentication/: __init__.py  apps.py  models.py  urls.py  views.py
api/authentication/migrations/: 0001_initial.py
api/timer/: __init__.py  apps.py  urls.py
auth/: account.html  forgot-password.html  info.txt  login.html  register.html  reset-password.html
backend/: __init__.py  conftest.py  db.py  logging_config.py  main.py  manage.py  models.py
backend/auth/: __init__.py  routers.py  schemas.py  services.py
backend/timer/: __init__.py  conftest.py  queries.py  routers.py  schemas.py  services.py  test_timer.py
frontend/: account.html  dashboard.html  forgot_password.html  index.html  landing.html  login.html  register.html  reset_password.html
frontend/css/: account.css  index.css  landing.css  login.css  register.css  reset_password.css
frontend/static/: app.js  styles.css
static/: app.js  info.txt  styles.css
static/auth/: info.txt
static/css/: forgot_password.css  index.css
static/js/: app.js  index.js
